frontend1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend1
  template:
    metadata:
      labels:
        app: frontend1
    spec:
      containers:
      - name: frontend1
        image: frontend1-image:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-content
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: html-content
        configMap:
          name: frontend1-config
---
