backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5000
