frontend1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend1-service
spec:
  selector:
    app: frontend1
  ports:
  - port: 80
    targetPort: 80
---
