frontend2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend2-service
spec:
  selector:
    app: frontend2
  ports:
  - port: 80
    targetPort: 80
---
